k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ir-remote-svc
  namespace: ir-remote
spec:
  selector:
    app: ir-remote-server
  ports:
    - port: 80
      targetPort: 8000
